fix: bad visibility for darkmode destructive color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -128,8 +128,8 @@
 		--muted-foreground: 215 20.2% 65.1%;
 		--accent: 217.2 32.6% 17.5%;
 		--accent-foreground: 210 40% 98%;
-		--destructive: 0 62.8% 30.6%;
-		--destructive-foreground: 210 40% 98%;
+		--destructive: 0 72% 51%;
+    	--destructive-foreground: 210 40% 98%;
 		--border: 0 0% 14%;
 		--input: 0 0% 14%;
 		--ring: 0 0% 14%;
